--- a/frontend/src/Tasks/Tasks.css
+++ b/frontend/src/Tasks/Tasks.css
@@ -6,6 +6,7 @@
     grid-area: main;
     display: flex;
     flex-wrap: wrap;
+    user-select: none;
 }
 
 
@@ -72,6 +73,7 @@
 .Tasks .tasksBody .list .listBody
 {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-flow: column;
     align-items: center;
