--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,14 +1,16 @@
 
-
 body
 {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    width: 100vw;
+    height: 100vh;
 }
 
 
 :root
 {
-    --bg-color: white;
+    --bg-color: #50FFB1;
+    --nav-color: #3C896D;
 }
