you can add a task now, the drag stopped working in wails: need to be fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,7 +12,7 @@
     background-color: var(--bg-color);
     display: grid;
     grid-template-columns: 60px 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: 100vh;
     grid-template-areas: 
         "aside main"
     ;
