--- a/frontend/src/Tasks/Tasks.css
+++ b/frontend/src/Tasks/Tasks.css
@@ -5,16 +5,17 @@
 {
     grid-area: main;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 0.5rem;
+    padding: 0.5rem;
     user-select: none;
 }
 
 
 .Tasks .tasksHeader
 {
-    flex: 0 0 100%;
-    height: 40px;
-    max-width: 100%;
+    width: 100%;
+    height: 10%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -29,29 +30,27 @@
 
 .Tasks .tasksBody
 {
-    flex: 0 0 100%;
-    height: calc( 100% - 40px);
-    max-width: 100%;
+    width: 100%;
+    height: 90%;
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    overflow-x: scroll;
+    align-items: start;
 }
 
 .Tasks .tasksBody .list
 {
-    height: 90%;
+    height: 98%;
     width: 20%;
     border-radius: 5px;
     border: 1px solid red;
     display: flex;
     flex-flow: column;
-    align-items: center;
 }
 
 .Tasks .tasksBody .list .listHeader
 {
     width: 100%;
+    height: 50px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -60,10 +59,16 @@
     border: 1px solid red;
 }
 
+.Tasks .tasksBody .list .listHeader i
+{
+    background-color: #fff;
+    border-radius: 50%;
+}
 
 .Tasks .tasksBody .list .listData
 {
     width: 100%;
+    height: 40px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -73,8 +78,164 @@
 .Tasks .tasksBody .list .listBody
 {
     width: 100%;
+    min-height: calc( 100% - 90px );
+    height:max-content;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    overflow-y: scroll;
+    box-sizing: border-box;
+    padding: 10px 5px;
+    gap: 10px;
+    scrollbar-width: none;
+}
+
+
+.Task
+{
+    box-sizing: border-box;
+    width: 100%;
+    height: max-content;
+    display: flex;
+    gap: 1%;
+    border: 1px solid black;
+    border-radius: 10px;
+    user-select: none;
+    background-color: red;
+    cursor: pointer;
+}
+
+.Task .TaskColor
+{
     height: 100%;
+    width: 10%;
+    background-color: red;
+    border-radius: 10px 0 0 10px;
+}
+
+.Task .TaskBody
+{
+    height: 100%;
+    width: 89%;
+    display: flex;
+    flex-flow: column;
+}
+
+
+
+.Task .TaskBody > *
+{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 5px;
+}
+
+
+
+.bg
+{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.34);
+    filter: blur(10px);
+    z-index: 1;
+}
+
+
+
+.AddTask
+{
+    position: fixed;
+    right: 0;
+    top: 0;
+    height: 100%;
+    background-color: red;
+    transition: all 0.3s ease;
+    z-index: 10;
     display: flex;
     flex-flow: column;
     align-items: center;
 }
+
+.AddTask .AddTaskTitle
+{
+    width: 100%;
+    height: 10%;
+    padding: 15px;
+}
+
+.AddTask input
+{
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    font-size: 16px;
+}
+
+.AddTask  textarea
+{
+    padding: 10px;
+    font-size: 16px;
+}
+
+.AddTask .AddTaskFor
+{
+    width: 100%;
+    height: 10%;
+    padding: 15px;
+}
+
+.AddTask .AddTaskBody
+{
+    width: 100%;
+    height: 40%;
+    padding: 15px;
+}
+
+
+.AddTask textarea
+{
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+    border: 1px solid black;
+    border-radius: 10px;
+    resize: none;
+    outline: none;
+}
+
+.AddTask h4
+{
+    width: 90%;
+}
+
+.AddTask button
+{
+    padding: 15px;
+    background-color: #fff;
+    color: black;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+
+.TasksDeleteArea
+{
+    position: fixed;
+    left: calc( 50% - 200px );
+    bottom: 20px;
+    width: 400px;
+    height: 150px;
+    color: red;
+    border: 5px dashed red;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+}
+
