--- a/frontend/src/History/History.css
+++ b/frontend/src/History/History.css
@@ -22,7 +22,7 @@
 .History .historyHeader .searchBox
 {
     width: 200px;
-    height: 10px;
+    height: fit-content;
     padding: 10px;
     border: 1px solid black;
     background-color: white;
@@ -96,9 +96,7 @@
 
 .HistoryAct > div
 {
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 1%;
+    padding: 7px;
 }
 
 
