--- a/frontend/src/Tasks/Tasks.css
+++ b/frontend/src/Tasks/Tasks.css
@@ -3,7 +3,11 @@
 
 .Tasks
 {
-    grid-area: main;
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: calc( 100vw - 50px );
+    height: 100vh;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
