--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,4 +1,36 @@
 
+/* Regular (400) */
+@font-face {
+    font-family: 'FunnelDisplay';
+    src: url('./assets/fonts/Funnel_Display/static/FunnelDisplay-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+/* Medium (500) */
+@font-face {
+    font-family: 'FunnelDisplay';
+    src: url('./assets/fonts/Funnel_Display/static/FunnelDisplay-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+/* Bold (700) */
+@font-face {
+    font-family: 'FunnelDisplay';
+    src: url('./assets/fonts/Funnel_Display/static/FunnelDisplay-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+/* Black (900) */
+@font-face {
+    font-family: 'FunnelDisplay';
+    src: url('./assets/fonts/Funnel_Display/static/FunnelDisplay-ExtraBold.ttf') format('truetype');
+    font-weight: 900;
+    font-style: normal;
+}
+
 body
 {
     margin: 0;
@@ -6,6 +38,7 @@ body
     box-sizing: border-box;
     width: 100vw;
     height: 100vh;
+    font-family: 'FunnelDisplay', sans-serif;
 }
 
 *
@@ -15,6 +48,6 @@ body
 
 :root
 {
-    --bg-color: #50FFB1;
-    --nav-color: #3C896D;
+    --bg-color: #9FC2CC;
+    --nav-color: #2C60A0;
 }
