--- a/frontend/src/Tasks/Tasks.css
+++ b/frontend/src/Tasks/Tasks.css
@@ -46,7 +46,7 @@
     height: 98%;
     width: 20%;
     border-radius: 5px;
-    border: 1px solid red;
+    border: 1px solid var(--nav-color);
     display: flex;
     flex-flow: column;
 }
@@ -59,8 +59,8 @@
     justify-content: space-around;
     align-items: center;
     border-radius: 5px 5px 0 0;
-    background-color: red;
-    border: 1px solid red;
+    background-color: var(--nav-color);
+    border: 1px solid var(--nav-color);
 }
 
 .Tasks .tasksBody .list .listHeader i
@@ -76,7 +76,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border-bottom: 1px solid red;
+    border-bottom: 1px solid var(--nav-color);
 }
 
 .Tasks .tasksBody .list .listBody
@@ -112,7 +112,7 @@
 {
     height: 100%;
     width: 10%;
-    background-color: red;
+    background-color: var(--nav-color);
     border-radius: 10px 0 0 10px;
 }
 
@@ -145,7 +145,7 @@
     right: 0;
     top: 0;
     height: 100%;
-    background-color: red;
+    background-color: var(--nav-color);
     transition: all 0.3s ease;
     z-index: 10;
     display: flex;
@@ -224,8 +224,8 @@
     bottom: 20px;
     width: 400px;
     height: 150px;
-    color: red;
-    border: 5px dashed red;
+    color: var(--nav-color);
+    border: 5px dashed var(--nav-color);
     border-radius: 20px;
     display: flex;
     justify-content: center;
