--- a/frontend/src/VideoPlayer/VideoPlayer.css
+++ b/frontend/src/VideoPlayer/VideoPlayer.css
@@ -1,5 +1,10 @@
 
 
+:root
+{
+    --videoplayer-bg-color: #404040;
+    --videoplayer-fg-color: #202020;
+}
 
 .VideoPlayer
 {
@@ -10,7 +15,7 @@
     gap: 10px;
     padding: 10px;
     overflow: hidden;
-    background-color: #404040;
+    background-color: var(--videoplayer-bg-color);
 }
 
 
@@ -23,7 +28,7 @@
     max-width: 80%;
     resize: horizontal;
     overflow: auto;
-    background-color: #202020;
+    background-color: var(--videoplayer-fg-color);
     padding: 10px;
     border-radius: 5px;
     color: #fff;
@@ -46,8 +51,8 @@
 
 .VideoPlayer .VideoNote .VideoNoteToolbar > *
 {
-    background-color: #202020;
-    border: 1px solid #404040;
+    background-color:  var(--videoplayer-fg-color);
+    border: 1px solid  var(--videoplayer-bg-color);
     aspect-ratio: 1;
     border-radius: 5px;
     display: flex;
@@ -57,12 +62,12 @@
 
 .VideoPlayer .VideoNote .VideoNoteToolbar > *.clicked
 {
-    background-color: #404040;
+    background-color:  var(--videoplayer-bg-color);
 }
 
 /* this is to change the style of the editor component */
 .VideoPlayer .VideoNote .DraftEditor-editorContainer {
-    border:1px solid #404040;
+    border:1px solid  var(--videoplayer-bg-color);
     border-radius: 5px;
     padding: 15px;
 }
