--- a/frontend/src/Tasks/Tasks.css
+++ b/frontend/src/Tasks/Tasks.css
@@ -95,7 +95,7 @@
 }
 
 
-.Task
+/* .Task
 {
     box-sizing: border-box;
     width: 100%;
@@ -108,13 +108,7 @@
     cursor: pointer;
 }
 
-.Task .TaskColor
-{
-    height: 100%;
-    width: 10%;
-    background-color: var(--nav-color);
-    border-radius: 10px 0 0 10px;
-}
+
 
 .Task .TaskBody
 {
@@ -132,11 +126,95 @@
     justify-content: start;
     align-items: center;
     gap: 5px;
+} */
+
+
+.Task
+{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 5%;
+    border: 2px solid var(--nav-color);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.Task .TaskColor
+{
+    height: 100%;
+    width: 10px;
+    background-color: var(--nav-color);
+    border-radius: 5px 0 0 5px;
+    outline: 2px solid var(--nav-color);
+}
+
+.Task .TaskContent
+{
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+}
+
+.Task .TaskContent .TaskHeader
+{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 20px;
 }
 
 
+.Task .TaskContent .TaskHeader .TaskExpand
+{
+    margin-left: auto;
+    margin-right: 10px;
+    height: 60%;
+    aspect-ratio: 1;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s ease;
+}
 
+.Task .TaskContent .TaskHeader .TaskExpand:hover
+{
+    border: 2px solid var(--nav-color);
+    outline: 2px solid var(--nav-color);
+    outline-offset: 0.5px;
+}
 
+.Task .TaskContent .TaskHeader .TaskExpand img
+{
+    width: 60%;
+    height: 60%;
+    transition: all 0.5s ease;    
+}
+
+.Task .TaskContent .TaskBody
+{
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+}
+
+.Task .TaskContent .TaskBody > *
+{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 5%;
+}
+
+.Task.open .TaskContent .TaskHeader .TaskExpand img
+{
+    transform: rotate(180deg);
+}
 
 
 .AddTask
@@ -232,10 +310,4 @@
     align-items: center;
     font-size: 30px;
     transition: all 0.3s ease;
-}
-
-/* NOT WORKING FOR NOW */
-.TasksDeleteArea:hover
-{
-    transform: scale(1.05);
 }
