--- a/frontend/src/Tasks/Tasks.css
+++ b/frontend/src/Tasks/Tasks.css
@@ -44,7 +44,7 @@
 .Tasks .tasksBody .list
 {
     height: 98%;
-    width: 20%;
+    width: 23%;
     border-radius: 5px;
     border: 1px solid var(--nav-color);
     display: flex;
@@ -63,10 +63,20 @@
     border: 1px solid var(--nav-color);
 }
 
-.Tasks .tasksBody .list .listHeader i
+.Tasks .tasksBody .list .listHeader .OpenAddTask
 {
-    background-color: #fff;
-    border-radius: 50%;
+    background-color: var(--bg-color);
+    border: 1px solid black;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Tasks .tasksBody .list .listHeader .OpenAddTask img
+{
+    width: 20px;
+    aspect-ratio: 1;
 }
 
 .Tasks .tasksBody .list .listData
@@ -95,40 +105,6 @@
 }
 
 
-/* .Task
-{
-    box-sizing: border-box;
-    width: 100%;
-    height: max-content;
-    display: flex;
-    gap: 1%;
-    border: 1px solid black;
-    border-radius: 10px;
-    user-select: none;
-    cursor: pointer;
-}
-
-
-
-.Task .TaskBody
-{
-    height: 100%;
-    width: 89%;
-    display: flex;
-    flex-flow: column;
-}
-
-
-
-.Task .TaskBody > *
-{
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    gap: 5px;
-} */
-
-
 .Task
 {
     width: 100%;
@@ -136,16 +112,16 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    gap: 5%;
     border: 2px solid var(--nav-color);
     border-radius: 5px;
     cursor: pointer;
+    user-select: none;
 }
 
 .Task .TaskColor
 {
     height: 100%;
-    width: 10px;
+    width: 5%;
     background-color: var(--nav-color);
     border-radius: 5px 0 0 5px;
     outline: 2px solid var(--nav-color);
@@ -166,6 +142,7 @@
     justify-content: start;
     align-items: center;
     gap: 20px;
+    padding: 0 10px;
 }
 
 
@@ -180,14 +157,9 @@
     justify-content: center;
     align-items: center;
     transition: all 0.3s ease;
+    border: 2px solid var(--nav-color);
 }
 
-.Task .TaskContent .TaskHeader .TaskExpand:hover
-{
-    border: 2px solid var(--nav-color);
-    outline: 2px solid var(--nav-color);
-    outline-offset: 0.5px;
-}
 
 .Task .TaskContent .TaskHeader .TaskExpand img
 {
@@ -201,15 +173,35 @@
     width: 100%;
     display: flex;
     flex-flow: column;
+    position: relative;
+    padding: 10px 0;
 }
 
 .Task .TaskContent .TaskBody > *
 {
+    width: 100%;
     display: flex;
     justify-content: start;
     align-items: center;
     gap: 5%;
+    margin-left: 10px;
 }
+
+
+.Task .TaskContent .TaskBody .TaskFor img
+{
+    width: 40px;
+    aspect-ratio: 1;
+}
+
+.Task .TaskContent .TaskBody .TaskFor input
+{
+    padding: 10px;
+    background-color: var(--bg-color);
+    border: none;
+    outline: none;
+}
+
 
 .Task.open .TaskContent .TaskHeader .TaskExpand img
 {
